--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <a href="/">Hexo<span class="header-subtitle"> | </span></a>
       </div>
       <ul class="header-navbar clearFix">
-        <li><a href="/">主页</a></li>
+        <li><a href="/">主页1</a></li>
 
-        <li><a href="/tags">标签</a></li>
+        <li><a href="/tags">标签2</a></li>
 
-        <li><a href="/archives">归档</a></li>
+        <li><a href="/archives">归档3</a></li>
 
-        <li><a href="/about">关于</a></li>
+        <li><a href="/about">关于4</a></li>
       </ul>
     </header>
     <div id="particles-js"></div>
